# rf-agent

./: .env.example  AI_INSTRUCTIONS.md  SKILLS_INTERFACE.md  SYSTEM_HARNESS.md
client-electron/: .gitignore  package-lock.json  package.json  tsconfig.json
client-electron/src/main/: index.ts
client-electron/src/preload/: index.ts
client-electron/src/renderer/: App.tsx  env.d.ts  index.css  index.html
client-electron/src/renderer/api/: agentService.ts
client-electron/src/renderer/features/skills/components/: SkillEditor.tsx
client-electron/src/renderer/store/: useAgentStore.ts
server-agent/: .gitignore  main.py  pyproject.toml  requirements.txt
server-agent/app/: main.py
server-agent/app/agents/: crew_manager.py
server-agent/app/core/: llm_manager.py
server-agent/app/domain/: models.py
server-agent/app/infrastructure/: llm_factory.py  skill_parser.py
server-agent/app/interfaces/: agent_controller.py
server-agent/app/skills/: parser.py
server-agent/app/usecases/: execute_agent.py
